--- a/style.css
+++ b/style.css
@@ -1,20 +1,83 @@
 body {
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     margin: 0;
+    min-height: 100vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
 }
 
 .header {
+    padding: 20px;
+    background-color: #1f2937;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 
 }
 
-.footer {
-    
+.header strong{
+    font-size: 24px;
+    color: white;
+}
+
+.header ul {
+    display: flex;
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+    gap: 20px;
+}
+.header ul a {
+    color: #e5e7eb;
+
 }
 
 .content {
     display: flex;
     flex-direction: column;
-    flex: 1;
+    flex: auto;
+}
+
+.hero {
+    padding: 20px;
+    background-color: #1f2937;
+    color: white;
+    display: flex;
+    justify-content: space-between;
+}
+
+.hero .block1 strong{
+    font-size: 48px;
+    font-weight: bolder;
+
+}
+
+.hero .block1 .hero-sub {
+    color: #e5e7eb;
+
+}
+.hero .block1 a{
+    padding: 5px;
+    background-color: #3882f6;
+    color: white;
+    
+}
+
+.hero .block2 {
+    background-color: gray;
+    display: flex;
+    align-items: center;
+
+}
+
+.footer {
+    padding: 20px;
+    background-color: #1f2937;
+    color: white;
+    text-align: center;
+}
+
+a {
+    text-decoration: none;
 }
