--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
 }
 
 .header {
-    padding: 20px;
+    padding: 20px 150px 20px 150px;
     background-color: #1f2937;
     display: flex;
     justify-content: space-between;
@@ -40,11 +40,19 @@ body {
 }
 
 .hero {
-    padding: 20px;
+    padding: 50px 150px 50px 150px;
     background-color: #1f2937;
     color: white;
     display: flex;
     justify-content: space-between;
+    gap: 50px;
+}
+
+.hero .block1 {
+    display: flex;
+    flex-direction: column;
+    align-items: baseline;
+    flex: 1;
 }
 
 .hero .block1 strong{
@@ -57,8 +65,9 @@ body {
     color: #e5e7eb;
 
 }
-.hero .block1 a{
-    padding: 5px;
+.hero .block1 a {
+    padding: 5px 20px 5px 20px;
+    border-radius: 5px;
     background-color: #3882f6;
     color: white;
     
@@ -67,7 +76,9 @@ body {
 .hero .block2 {
     background-color: gray;
     display: flex;
+    justify-content: center;
     align-items: center;
+    flex: 1;
 
 }
 
