--- a/style.css
+++ b/style.css
@@ -27,16 +27,18 @@ body {
     padding: 0;
     margin: 0;
     gap: 20px;
+    font-size: 18px;
 }
 .header ul a {
     color: #e5e7eb;
+    text-decoration: none;
 
 }
 
 .content {
     display: flex;
     flex-direction: column;
-    flex: auto;
+    flex: 1;
 }
 
 .hero {
@@ -63,14 +65,16 @@ body {
 
 .hero .block1 .hero-sub {
     color: #e5e7eb;
-
+    font-size: 18px;
 }
 .hero .block1 a {
+    margin-top: 10px;
     padding: 5px 20px 5px 20px;
     border-radius: 5px;
     background-color: #3882f6;
     color: white;
-    
+    font-weight: bold;
+    text-decoration: none;
 }
 
 .hero .block2 {
@@ -82,13 +86,63 @@ body {
 
 }
 
+.four-info {
+    margin-bottom: 50px;
+}
+.four-info h1{
+    text-align: center;
+    font-size: 36px;
+    font-weight: bolder;
+    color: #1f2937;
+}
+
+.four-info .block1 {
+    display: flex;
+    justify-content: center;
+    gap: 50px;
+}
+
+.four-info .block1 div{
+    width: 150px;
+
+}
+.four-info .block1 .sq-img {
+    border-radius: 20px;
+    border: 2px solid #3882f6;
+    width: 150px;
+    height: 150px;
+}
+
+.four-info .block1 .sq-text {
+    text-align: center;
+    color: #1f2937;
+    font-size: 16px;
+}
+
+
+.quote {
+    padding: 50px 250px 50px 250px;
+    background-color: #e5e7eb;
+}
+.quote em {
+    font-size: 36px;
+    font-style: italic;
+    font-weight: lighter;
+
+}
+
+.quote .author {
+    text-align: right;
+    font-weight: bold;
+}
+
+.contact {
+}
+
 .footer {
     padding: 20px;
     background-color: #1f2937;
-    color: white;
+    color: #e5e7eb;
     text-align: center;
-}
-
-a {
-    text-decoration: none;
+    font-size: 18px;
 }
