--- a/style.css
+++ b/style.css
@@ -137,6 +137,35 @@ body {
 }
 
 .contact {
+    border-radius: 10px;
+    margin: 50px 100px 50px 100px;
+    padding: 50px;
+    background-color: #3882f6;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+
+}
+
+.contact .call {
+    color: white;
+    font-size: 24px;
+    font-weight: bold;
+}
+
+.contact .sign-up {
+    color: #e5e7eb;
+    font-size: 18px;
+}
+
+.contact a {
+    padding: 5px 20px 5px 20px;
+    border-radius: 5px;
+    border: 2px solid white;
+    background-color: #3882f6;
+    color: white;
+    font-weight: bold;
+    text-decoration: none;
 }
 
 .footer {
