Adjust flex spacing of content

--- a/style.css
+++ b/style.css
@@ -38,7 +38,8 @@ body {
 .content {
     display: flex;
     flex-direction: column;
-    flex: 1;
+    flex: auto;
+    justify-content: space-between;
 }
 
 .hero {
